--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="ui.bootstrap.demo" lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>The Rooms</title>
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- AngularJS Directives -->
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script>
+	<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.1.js"></script>
 
+	<!-- Mi app Angular -->
+	<script src="js/app.js"></script>
+
+    <!-- Bootstrap -->
+	<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+	
     <!-- Add custom CSS here -->
     <link href="css/bootstrap-social.css" rel="stylesheet" type="text/css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 
-    <!--Holder.js-->
+    <!-- Holder.js -->
     <script src="js/holder.js"></script>
-
-    <!--AngularJS Directives-->
-    <script src="js/angular.min.js"></script>
-    <script src="js/script1.js"></script>
-    <script src="js/protractor.js"></script>
-    <script src="js/ui-bootstrap-0.12.min.js"></script>
-    <!--<script src="js/ui-bootstrap-tpls-0.12.1.min.js"></script>-->
 
   </head>
 <body>
@@ -144,11 +144,12 @@
 
               <div class="col-md-4 hidden-xs">
                 <div class="panel">
-                  <div class="panel-body">
+                  <div ng-controller="TooltipDemoCtrl" class="panel-body">
                       <h3>RIGHT POSITION</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                      <p>Lorem ipsum dolor sit <a href="#" tooltip-placement="left" tooltip="A la izquierda!">desayuno</a> amet, consectetur adipisicing elit, sed do eiusmod
+                      tempor incididunt ut labore et dolore magna aliqua. <a href="#" tooltip-placement="right" tooltip="A la derecha!">seguridad</a>Ut enim ad minim veniam,
+                      <a href="#" tooltip-placement="bottom" tooltip="Abajo!">baño y regadera</a> quis nostrud exercitation ullamco laboris nisi ut 
+					  aliquip ex ea commodo <a href="#" tooltip="{{dynamicTooltip}}">{{dynamicTooltipText}}</a>
                       </p>
                   </div>
                 </div>
