--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <h3>CENTER LEFT</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            <p>Lorem ipsum dolor amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -226,13 +226,14 @@
 
       <div class="col-md-4 panel">
         <div class="panel panel-default">
-          <div class="panel-body">
+          <div ng-controller="TooltipDemoCtrl" class="panel-body">
               <h3>RIGHT POSITION</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              <p>Lorem dolor sit amet, consectetur adipisicing elit, <a href="#" tooltip-placement="left" tooltip="A la izquierda!">desayuno</a> 
+			  sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
               consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur.</p>
+              cillum dolore eu fugiat nulla pariatur <a href="#" tooltip="{{dynamicTooltip}}">{{dynamicTooltipText}}</a>.</p>
           </div>
         </div>
       </div><!---->
